--- a/express-server/package.json
+++ b/express-server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "~4.16.3"
+    "express": "~4.16.3",
+    "mongoose": "^4.7.0"
   }
 }
