update working dir, resolve volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     build: client
     command: nodemon angular-client
     volumes:
-      - ./client:/app
+      - './client:/usr/src/app'
+      - '/usr/src/app/node_modules'
     ports:
       - "4200:4200"
       - "49153:49153"
