--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,23 +2,22 @@
 FROM node:10.10.0
 
 # Create a directory where our app will be placed
-RUN mkdir -p /app
+RUN mkdir -p /usr/src/app
 
 # Change directory so that our commands run inside this new directory
-WORKDIR /app
+WORKDIR /usr/src/app
 
 # Install nodemon for hot reload
 RUN npm install -g nodemon
-RUN npm config set registry https://registry.npmjs.org
 
 # Copy dependency definitions
-COPY package.json /app/package.json
+COPY package.json /usr/src/app/package.json
 
 # Install dependecies
 RUN npm install
 
 # Get all the code needed to run the app
-COPY . /app
+COPY . /usr/src/app
 
 # Expose the port the app runs in
 EXPOSE 4200
