--- a/server/.gitignore
+++ b/server/.gitignore
@@ -3,6 +3,9 @@
 Icon?
 ._*
 
+# compiled output
+/dist
+
 # Windows
 Thumbs.db
 ehthumbs.db
@@ -12,13 +15,11 @@ Desktop.ini
 .directory
 *~
 
-
 # npm
 node_modules
 package-lock.json
 *.log
 *.gz
-
 
 # Coveralls
 coverage
