--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,22 @@
 {
   "name": "express-server",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "~4.16.3",
+    "express": "^4.16.3",
     "mongoose": "^4.7.0",
     "socket.io": "^1.3.7"
-  }
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/mongoose": "^5.2.17",
+    "@types/chai": "^4.1.5",
+    "@types/mocha": "^5.2.5",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.0.3"
+  },
+  "main": "./dist/server.js"
 }
