--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^4.7.0",
-    "socket.io": "^1.3.7"
+    "ws": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.2.17",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.5",
+    "@types/ws": "^4.0.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
